# rdyncall

./: .Rbuildignore  .gitattributes  .gitignore  .hgignore  404.html  BUGS  ChangeLog  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE-text.md  NAMESPACE  NEWS.md  README.Rmd  README.md  README.txt  TODO  _pkgdown.yml  authors.html  authors.md  cleanup  cleanup.win  cran-comments.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
R/: callback.R  dynbind.R  dyncall.R  dynfind.R  dynload.R  dynport.R  dynport.rnw  dynstruct.R  pack.R  rdyncall-package.R  sdl.rnw  struct.R  utils.R  utils_str.R
articles/: callbacks.html  callbacks.md  creating-dynports.html  creating-dynports.md  dynbind-dynport.html  dynbind-dynport.md  ffi-safety.html  ffi-safety.md  getting-started.html  getting-started.md  gui-demos.html  gui-demos.md  index.html  index.md  non-gui-demos.html  non-gui-demos.md  rdyncall.html  rdyncall.md  sdl3-non-gui.html  sdl3-non-gui.md  signatures.html  signatures.md  structs-unions-memory.html  structs-unions-memory.md  troubleshooting.html  troubleshooting.md
demo/: 00Index  R_ShowMessage.R  R_malloc.R  SDL.R  SDL_audio.R  SDL_raster.R  SDL_tinycc.R  blink.R  callbacks.R  expat.R  factorial.R  (+12 more)
lua/luadyncall/src/: CMakeLists.txt  Makefile.custom  README.txt  array.lua  cocoautil.m  dyncall.lua  dynguess.h  dynload.lua  dynport.lua  dynstruct.lua  dyntype.c  dyntype.h  dyntype.lua  dyntype_boost.cpp  intutils.cpp  larray.c  ldyncall.c  ldynguess.c  ldynload.c  ldynstruct.c  ldyntype.c  makedoc.sh  path.lua  smartptr.c  typesignature.lua
(+490 files in other folders)
